log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 11:05:47 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘List’ [-Werror=unused-variable]
   14 |   ArrayList* List = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
4961595
Tue 28 Mar 2023 11:06:09 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘L’ [-Werror=unused-variable]
   14 |   ArrayList* L = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^
cc1: all warnings being treated as errors
Compilation failed
a590bbd
Tue 28 Mar 2023 11:06:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘List’ [-Werror=unused-variable]
   14 |   ArrayList* List = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
c0ede51
Tue 28 Mar 2023 11:06:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
85f13f6
Tue 28 Mar 2023 11:07:21 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
03393f7
Tue 28 Mar 2023 11:08:52 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
d279225
Tue 28 Mar 2023 11:15:08 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:24:6: error: ‘List’ undeclared (first use in this function)
   24 |   if(List -> size == List -> capacity){
      |      ^~~~
arraylist.c:24:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
eabd50c
Tue 28 Mar 2023 11:15:23 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b9042eb
Tue 28 Mar 2023 11:16:03 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
80deb2f
